# sotto

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
Casks/: sotto.rb
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  lib.rs  macos.rs  main.rs  storage.rs
