[package]
name = "sotto"
version = "0.1.0"
description = "Daily aphorism on your desktop"
edition = "2021"
rust-version = "1.77"

[lib]
name = "sotto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
